tests/ui/suggestions/type-ascription-instead-of-method.stderr
error: path separator must be a double colon
  --> $DIR/type-ascription-instead-of-method.rs:3:16
   |
LL |     let _ = Box:new("foo".to_string());
   |                ^
   |
   = note: if you meant to annotate an expression with a type, the type ascription syntax has been removed, see issue #101728 <https://github.com/rust-lang/rust/issues/101728>
help: use a double colon instead
   |
LL |     let _ = Box::new("foo".to_string());
   |                 +

error: aborting due to 1 previous error

